# garr-horizon

./: LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
garr_horizon/content/garr_users/: forms.py  models.py  panel.py  tables.py  urls.py  views.py
garr_horizon/content/garr_users/templates/garr_users/: .detail.html.swp  _detail_overview.html  detail.html
garr_horizon/enabled/: _31000_garr-horizon.py
