[metadata]
name = garr_horizon
summary = GARR users management panel 
version = 1.0.0
description-file =
    README.rst
author = Bogdan Carpusor
author_email = bcarpusor@cloudbasesolutions.com
home-page = http://www.openstack.org/
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    garr_horizon
